fixed h1 title width on mobile devices

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -24,6 +24,7 @@
   font-size: 16px !important;
   color: #000000 !important;
   padding: 16px !important;
+  text-align: center !important;
 }
 
 .homepage-section-btn:hover {
